Implementação dos painéis e rodapé

--- a/mirrorfashion/index.html
+++ b/mirrorfashion/index.html
@@ -5,12 +5,12 @@
         <title>Page Title</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/estilos.css">
+        <!--[if lt IE 9]>
+            <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     </head>
     <body>
         <header class="container">
-            <!--[if lt IE 9]>
-                <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <![endif]-->
             <h1><img src="img/logo.png" alt="Mirror Fashion"></h1>
             <p class="sacola">Nenhum item na sacola de compras</p>
             <nav class="menu-opcoes">
@@ -47,8 +47,123 @@
             </section>
             <img src="img/destaque-home.png" alt="Promoção: Big City Night">
         </div>
-        <article id="main"></article>
-        <article id="destaques"></article>
-        <footer></footer>
+        <div class="container paineis">
+            <article class="painel novidades">
+                <h2>Novidades</h2>
+                <ol>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura1.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura2.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura3.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura4.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura5.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura6.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                </ol>
+            </article>
+            <article class="painel mais-vendidos">
+                <h2>Mais Vendidos</h2>
+                <ol>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura7.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura8.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura9.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura10.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura11.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="img/produtos/miniatura12.png" alt="">
+                                <figcaption>Fuzz Cargigan por R$ 129,90</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                </ol>
+            </article>
+        </div>
+        <footer>
+            <div class="container">
+                <img src="img/logo-rodape.png" alt="Logo Mirror Fashion">
+                <ul class="social">
+                    <li><a href="http://facebook.com/mirrorfashion">Facebook</a></li>
+                    <li><a href="http://twitter.com/mirrorfashion">Twitter</a></li>
+                    <li><a href="http://plus.google.com/mirrorfashion">Google+</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
